<resources>
    <string name="app_name">Filtrify</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="new_image">New image</string>
    <string name="images">Images</string>
    <string name="link">Link</string>
    <string name="enter_image_link">Enter image link</string>
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">Computer graphics project</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="remove">Remove</string>
    <string name="select_image">Select image</string>
</resources>
