<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/bottom_sheet_new_image"
    android:background="@color/colorAccent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_height="260dp"
    app:behavior_peekHeight="60dp">

    <TextView
        android:id="@+id/tv_select_image"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/select_image"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_new_image_link"
            android:textColor="@android:color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_link"
            android:text="@string/link"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_new_image_gallery"
            android:textColor="@android:color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_image"
            android:text="@string/images"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_new_image_camera"
            android:textColor="@android:color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_camera"
            android:text="@string/camera"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>