<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_image_options"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:background="#AB21Ad23"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <TextView
        android:id="@+id/tv_bottom_sheet_peek"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textAllCaps="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/new_image"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_bottom_sheet_image_link"
            android:drawablePadding="8dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/ic_link"
            android:text="@string/link"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_bottom_sheet_images"
            android:drawablePadding="8dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/ic_image"
            android:text="@string/images"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_bottom_sheet_camera"
            android:drawablePadding="8dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/ic_camera"
            android:text="@string/camera"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <com.oswaldogh89.library.LatestImages
        android:id="@+id/latest_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>